--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,5 @@
-<h2> List of Users </h2>
+<ul class="list-group mt-5">
+  <% @users.each do |user| %>
+    <%= render 'users/user', user: user %>
+  <% end %>
+</ul>
