--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,43 @@
-<h2> A specific post for a specific user </h2>
+<div class="my-3 border border-secondary p-2">
+
+  <div class="d-flex justify-content-between">
+
+    <h2><%= @post.title %> by <%= @post.author.name %></h2>
+
+    <div>
+      <button type="button" class="btn btn-primary">
+        Comments:
+        <span class="badge bg-secondary">
+          <%= @post.comments_counter  ? @post.comments_counter : 0 %>
+        </span>
+      </button>
+      <button type="button" class="btn btn-primary">
+        Likes:
+        <span class="badge bg-secondary">
+          <%= @post.likes_counter ? @post.likes_counter  : 0 %>
+        </span>
+      </button>
+    </div>
+
+  </div>
+
+  <p>
+    <%= @post.text %>
+  </p>
+
+  <div> 
+    <h4> Comments </h4>
+
+    <ul class="list-group">
+      <% if @post.comments.length > 0 %>
+        <% @post.comments.each do |comment| %>
+        <li class="list-group-item"><%= comment.author.name %> : <%= comment.text %></li>
+        <% end %>
+      <% else %>
+        <li class="list-group-item">No comments</li>
+      <% end %>
+    </ul>
+  </div>
+
+</div>
+
