--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,6 @@
   <% end %>
 </ul>
 
-<button type="button" class="btn btn-secondary">
-  See all posts
-</button>
+<a href="/users/<%= @user.id %>/posts" class="btn btn-secondary w-100 my-3">
+  See All Posts
+</a>
