Update the Design

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<li class="list-group-item my-3 border-top">
+<li class="list-group-item my-3 border-top rounded">
 
   <a href="/users/<%= @user.id %>/posts/<%= post.id %>" class="text-reset text-decoration-none">
     <div class="d-flex flex-column gap-2">
