--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<li class="list-group-item my-3 d-flex justify-content-around align-items-center flex-wrap gap-2 border-top">
+<li class="list-group-item my-3 d-flex justify-content-around align-items-center flex-wrap gap-2 border-top py-3">
 
   <a href="/users/<%= user.id %>">
     <%= image_tag user.photo, height: 100, width: 100 %>
