--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-group mt-5">
   <% @users.each do |user| %>
-    <%= render 'users/user', user: user %>
+    <%= render 'user', user: user %>
   <% end %>
 </ul>
