--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="my-3 d-flex justify-content-around align-items-center flex-wrap gap-2">
+<div class="my-3 py-3 d-flex justify-content-around align-items-center flex-wrap gap-2 bg-light rounded">
 
   <a href="/users/<%= @user.id %>">
     <%= image_tag @user.photo, height: 100, width: 100 %>
@@ -18,6 +18,6 @@
 
 <ul class="list-group mt-5">
   <% @user.posts.each do |post| %>
-    <%= render 'posts/post', post: post %>
+    <%= render 'post', post: post %>
   <% end %>
 </ul>
