Allow Users to add likes to Posts

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,7 +13,7 @@
             <%= post.comments_counter  ? post.comments_counter : 0 %>
           </span>
         </button>
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="btn btn-primary" disable>
           Likes:
           <span class="badge bg-secondary">
             <%= post.likes_counter ? post.likes_counter  : 0 %>
