Add Flash messages

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,7 @@
 <section class="my-3 border border-secondary p-4 bg-light rounded">
 
+  <%= render 'shared/flash' %>
+
   <div class="d-flex justify-content-between">
 
     <h2><%= @post.title %> by <%= @post.author.name %></h2>
@@ -37,5 +39,6 @@
    <h4 class="mb-3">Add Comment</h4>
     <%= render "add_comment", post: @post %>
   </div>
+ 
 </section>
 
