--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,17 +1,25 @@
-<li class="list-group-item my-3 d-flex justify-content-around align-items-center flex-wrap gap-2 border-top py-3">
+<li class="list-group-item my-3 d-flex justify-content-between flex-wrap gap-4 border-top py-3 rounded">
 
-  <a href="/users/<%= user.id %>">
+  <div class="d-flex align-items-center gap-2">
     <%= image_tag user.photo, height: 100, width: 100 %>
-  </a>
 
-  <h2><%= user.name %></h2>
+    <h2><%= user.name %></h2>
+  </div>
 
-  <button type="button" class="btn btn-primary align-self-end">
-    Number of posts:
-    <span class="badge bg-secondary">
-      <%= user.posts_counter ? user.posts_counter : 0 %>
-    </span>
-  </button>
+
+  <div class="align-self-end d-flex gap-2">
+
+    <a href="/users/<%= user.id %>" class="btn btn-outline-secondary">
+      View Profile
+    </a>
+
+    <button type="button" class="btn btn-primary">
+      Number of posts:
+      <span class="badge bg-secondary">
+        <%= user.posts_counter ? user.posts_counter : 0 %>
+      </span>
+    </button>
+  </div>
 
 </li>
 
