--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -3,3 +3,16 @@
     <%= flash[:success] %>
   </div>
 <% end %>
+
+<% if flash[:notice] %>
+  <div class="alert alert-success mt4" role="alert">
+    <%= notice %>
+  </div>
+<% end %>
+
+
+<% if flash[:alert] %>
+  <div class="alert alert-danger mt4" role="alert">
+    <%= alert %>
+  </div>
+<% end %>
