--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,11 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
 
-  <body class="">
+  <body>
 
     <%= render 'shared/header' %>
 
     <main class="container">
-
-     <%= render 'shared/flash' %>
 
 
       <%= yield %>
