--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="my-3 py-3 d-flex justify-content-around align-items-center flex-wrap gap-2 bg-light rounded">
 
   <a href="/users/<%= @user.id %>">
-    <%= image_tag @user.photo, height: 100, width: 100 %>
+    <%= image_tag @user.photo || 'https://picsum.photos/100',  width: 100 %>
   </a>
 
 
