--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,8 @@
       </span>
 
       <%= render "add_like", post: @post %>
+
+      <%= render "delete_post", post: @post %>
     </div>
 
   </div>
