--- a/app/views/users/_post.html.erb
+++ b/app/views/users/_post.html.erb
@@ -8,13 +8,13 @@
     <button type="button" class="btn btn-primary">
       Comments:
       <span class="badge bg-secondary">
-        <%= post.comments_counter  ? post.comments_counter : 0 %>
+        <%= post.comments_counter %>
       </span>
     </button>
     <button type="button" class="btn btn-primary">
       Likes:
       <span class="badge bg-secondary">
-        <%= post.likes_counter ? post.likes_counter  : 0 %>
+        <%= post.likes_counter %>
       </span>
     </button>
   </div>
