--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -16,7 +16,7 @@
     <button type="button" class="btn btn-primary">
       Number of posts:
       <span class="badge bg-secondary">
-        <%= user.posts_counter ? user.posts_counter : 0 %>
+        <%= user.posts_counter %>
       </span>
     </button>
   </div>
